--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,41 @@
 .h-2 {
 	height: 20px;
 }
+
+/** AUTOCOMPLETE **/
+
+.findoc-autocomplete-list {
+	display: none;
+	max-width: 300px;
+	width: 100%;
+	color: var(--text-normal);
+	background-color: var(--background-primary);
+	padding: 0;
+	border: 2px solid white;
+	border: 2px solid white;
+	box-shadow: 4px 4px white;
+	margin-top: 30px;
+}
+
+.findoc-autocomplete-list-opened {
+	display: block;
+	position: absolute !important;
+	z-index: 10;
+}
+
+.findoc-autocomplete-list > li {
+	list-style: none;
+	width: 100%;
+	padding: 12px 12px;
+	word-break: break-all;
+	z-index: 11;
+}
+
+.findoc-autocomplete-list > li:hover {
+	background: rgba(0, 0, 0, 0.1);
+}
+
+.findoc-autocomplete-container {
+	position: relative;
+	width: 100%;
+}
