feat: sort by date button, print table information

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@
 	margin-bottom: 10px;
 }
 
+.findoc-btn-margin-right {
+	margin-right: 10px;
+}
+
 .findoc-csv-parent {
 	margin-bottom: 50px;
 }
